k8s/overlays/production/patches/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graph
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
  - hosts:
    - 21g.social
    secretName: 21g-tls
  - hosts:
    - graph.haneru.dev
    secretName: graph-tls
